[tool.poetry]
name = "solana-validator-rewards"
version = "0.1.0"
description = ""
authors = ["Mark Vainomaa <mv@restake.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
duckdb = "^1.3.2"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
